Fix image in post on mobile

--- a/assets/css/_sass/_ctech-adaptions.scss
+++ b/assets/css/_sass/_ctech-adaptions.scss
@@ -108,3 +108,7 @@
         display: block;
     }
 }
+
+.img-responsive, article img {
+    max-width: 100%;
+}
